kubernetes/AWS/1-gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ithust-gateway
  namespace: production
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.ithust.store
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  type: ClusterIP
  selector:
    app: ithust-gateway
  ports:
    - name: gateway
      port: 4000
      targetPort: 4000
      protocol: TCP
