kubernetes/AWS/1-gateway-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ithust-gateway-ingress
  namespace: production
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ithust-gateway-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /gateway-health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '120'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '10'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/subnets: subnet-0bfb460ed34f20faf, subnet-0d030ff4c2872dade
    alb.ingress.kubernetes.io/auth-session-cookie: session
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=604800
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: api.ithust.store
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: ithust-gateway
      port:
        number: 4000
  tls:
    - hosts:
        - '*.ithust.store'
      secretName: gateway-ingress-tls
  rules:
    - host: api.ithust.store
      http:
        paths:
          - path: /api/gateway/v1
            pathType: Prefix
            backend:
              service:
                name: ithust-gateway
                port:
                  number: 4000
